objects/PD_Equipment_Code__c/PD_Equipment_Code__c.object-meta.xml
<CustomObject>
    <label>PD Equipment Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD Equipment Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>