objects/PD_Equipment_Code__c/fields/Alpha_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Code__c</fullName>
    <label>Alpha Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>