objects/PD_Equipment_Code__c/fields/Auto_Equip_ID__c.field-meta.xml
<CustomField>
    <fullName>Auto_Equip_ID__c</fullName>
    <label>Auto Equip ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>