objects/PD_Equipment_Code__c/fields/Equip_Group__c.field-meta.xml
<CustomField>
    <fullName>Equip_Group__c</fullName>
    <label>Equip Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>