objects/PD_Equipment_Code__c/fields/Nav_Equip_Code__c.field-meta.xml
<CustomField>
    <fullName>Nav_Equip_Code__c</fullName>
    <label>Nav Equip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>