objects/PD_Equipment_Code__c/fields/Salesforce_Equipment_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Equipment_Group_ID__c</fullName>
    <label>Salesforce Equipment Group ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>