objects/PD_Equipment_Code__c/fields/Salesforce_Equipment_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Equipment_Type_ID__c</fullName>
    <label>Salesforce Equipment Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>